TP1 parite 2, ajout des conditions pour choisir ces convertions

--- a/TP1_convertisseur_ZAVARELLA_MATTEO/pom.xml
+++ b/TP1_convertisseur_ZAVARELLA_MATTEO/pom.xml
@@ -11,4 +11,5 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.tp1_convertisseur_zavarella_matteo.TP1_convertisseur_ZAVARELLA_MATTEO</exec.mainClass>
     </properties>
+    <name>TP2_convertisseurObjet_ZAVARELLA_MATTEO</name>
 </project>
